[package]
description = "Created with Anchor"
edition = "2021"
name = "raydium_cpi"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "raydium_cpi"

[features]
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
